--- a/BeachVolleyballAddin/Properties/Settings.settings
+++ b/BeachVolleyballAddin/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="BeachVolleyballAddin.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="AppFolderName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">BeachVolleyAddIn</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
