--- a/BeachVollezball.Tests/BeachVolleyball.Tests.csproj
+++ b/BeachVollezball.Tests/BeachVolleyball.Tests.csproj
@@ -47,6 +47,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
